<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingStart="@dimen/_7dp"
    android:paddingEnd="@dimen/_7dp"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="300dp"
        android:layout_height="match_parent"
        app:cardCornerRadius="20dp"
        android:elevation="12dp"
        android:layout_centerHorizontal="true"
        android:innerRadius="0dp"
        android:shape="ring"
        android:thicknessRatio="1.9">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/newsfeed_image"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:scaleType="fitXY"
                android:src="@drawable/img_not_found"
                />
            <TextView
                android:id="@+id/newsfeed_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/newsfeed_image"
                android:hint="@string/title_word"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="#000"
                android:lines="2"
                android:layout_marginStart="@dimen/_20dp"
                android:layout_marginTop="@dimen/_10dp"/>


            <CheckBox
                android:id="@+id/saveMoreArticleChkBx"
                android:layout_width="@dimen/_35dp"
                android:layout_height="@dimen/_30dp"
                android:button="@null"
                android:background="@drawable/unfavorite_article"
                android:layout_below="@+id/newsfeed_title"
                android:layout_marginTop="@dimen/_10dp"
                android:layout_marginBottom="@dimen/_10dp"
                android:layout_toEndOf="@id/trendingCategory"
                android:layout_marginStart="@dimen/_40dp"/>

            <LinearLayout
                android:padding="8dp"
                android:id="@+id/share"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="7dp"
                android:background="@drawable/shape_category"
                android:orientation="horizontal"
                android:layout_below="@+id/newsfeed_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="20dp"
                    android:src="@android:drawable/ic_menu_share"/>
                <TextView
                    android:layout_marginEnd="@dimen/_20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/share"
                    android:textColor="#fff"
                    android:textSize="@dimen/_15sp"
                    android:textStyle="bold"
                    android:layout_gravity="center"/>

            </LinearLayout>


            <ProgressBar
                android:id="@+id/savingPBMoreStories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:layout_alignParentBottom="true"
                android:visibility="invisible"
                style="?android:attr/progressBarStyleHorizontal" />

            <TextView
                android:id="@+id/newsfeed_content"
                android:layout_margin="@dimen/_10dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/share"
                android:hint="@string/content"
                android:textSize="@dimen/_15sp"
                android:textColor="#8e8989"/>

        </RelativeLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>