<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.organizers_group.stadfm.Activities.SettingActivity">

    <RelativeLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:background="@drawable/gradient"
        android:orientation="horizontal"
        android:padding="@dimen/_20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/upperSearchLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/settingNavBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="8dp"
                android:src="@drawable/back_icon"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:gravity="center"
                android:text="@string/setting"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="@color/white"/>

            <ImageView
                android:id="@+id/imageSettingSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="8dp"
                android:backgroundTint="@color/white"
                app:srcCompat="@drawable/search_icon" />
        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:padding="@dimen/_15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="@dimen/_25dp"
                android:layout_height="@dimen/_25dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/com_facebook_button_icon_blue"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/imageView2"
                android:layout_marginStart="30dp"
                android:layout_toEndOf="@+id/imageView2"
                android:text="@string/facebook"
                android:textSize="@dimen/_15sp"
                android:textColor="@color/com_facebook_blue"/>

            <TextView
                android:id="@+id/fbRegisterText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/imageView2"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="15dp"
                android:gravity="end"
                android:text="@string/connected"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_15sp" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#383636" />

        <LinearLayout
            android:padding="@dimen/_15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:src="@drawable/notification"
                android:layout_marginStart="10dp"
                android:layout_width="@dimen/_25dp"
                android:layout_height="@dimen/_25dp" />

            <Switch
                android:id="@+id/switchNotify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30dp"
                android:layout_marginEnd="@dimen/_15dp"
                android:text="@string/push_notification" />


        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#383636"
            />

        <RelativeLayout
            android:id="@+id/logoutLayout"
            android:padding="@dimen/_15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/logout"
                android:layout_marginLeft="10dp"
                android:layout_width="@dimen/_25dp"
                android:layout_height="@dimen/_25dp"
                android:id="@+id/imageView4" />

            <TextView
                android:id="@+id/logoutText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/imageView4"
                android:layout_marginStart="30dp"
                android:layout_toEndOf="@+id/imageView4"
                android:text="Logout"
                android:textSize="@dimen/_15sp" />

        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#383636"
            />
    </LinearLayout>

</LinearLayout>
